# quantagora

./: .env.example  .gitignore  Makefile  README.md  default_config.py  docker-compose.yml  trading_graph.py  web_interface.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260422_0001_create_trading_domain_schema.py  20260424_0002_add_llm_reports.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: approvals.py  health.py  llm.py  market.py  portfolio.py  risk.py  settings.py  signals.py  universe.py
backend/app/brokers/: __init__.py  base.py  kis.py  mock.py  schemas.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/domain/: models.py
backend/app/llm/: __init__.py  base.py  openai_provider.py  openrouter_provider.py  prompts.py
backend/app/services/: indicators.py  llm_reports.py  market_calendar.py  market_data.py  risk_policy.py  scheduler.py  signal_engine.py  universe.py
backend/tests/: test_kis_adapter.py  test_llm_reports.py  test_market_calendar.py  test_signal_engine.py  test_universe_engine.py
docs/: PRD-us-auto-trading.md  TASKS-us-auto-trading.md  TRD-us-auto-trading.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
templates/: demo_new.html
