[project]
name = "quantagora-backend"
version = "0.1.0"
description = "Personal US-listed securities auto-trading assistant backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
